--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
         <form action="/ProfessorZone" method="POST" name="Professor">
             <div>
                 <span>Professors zone</span>
-                <input type="text" placeholder="Email address" name="Email" pattern="[.+@+.]">
+                <input type="text" placeholder="Email address" name="Email">
                 <input type="password" placeholder="Password" name="Password">
                 <button type="submit">Login</button>
                 <a href="{{url_for('static', filename='CreateAccount.html')}}"><small>Create account</small></a>
