--- a/templates/question.html
+++ b/templates/question.html
@@ -1,12 +1,9 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Questions</title>
-    <style>
+{% extends "Professors.html" %}
+        {% block style %}
         form>div{
             position:relative;
             margin-top:7%;
-            margin-left:25%;    
+            margin-left:25%;
         }
         form>div>input{
             position: relative;
@@ -15,7 +12,7 @@
             height:1cm;
             border-radius:4px;
             border:solid 1px grey;
-            font-size:15px;  
+            font-size:15px;
             margin-left:25%;
         }
         form>div>button{
@@ -44,12 +41,12 @@
             border-radius:4px;
             border:solid 1px grey;
         }
-    </style>
-    </head>
-    <body>
+        {% endblock %}
+
+       {% block p %}
         <form id="QPaper">
             <div>
-                
+
                 <span>Branch</span><select>
                     <option value="Cs">CS</option>
                     <option value="It">IT</option>
@@ -61,7 +58,7 @@
                     <option value="1">4</option>
                     <option value="1">5</option>
                     <option value="1">6</option>
-                </select>   
+                </select>
                 <br>
                 <span>Question paper code(6 digit)*</span><input type="text" pattern="[0-9]{6}" maxlength="6" style="margin-left: 13%"><br>
                 <span>Subject Name</span><input type="text" style="margin-left:29%" list="Subject"><br>
@@ -72,12 +69,11 @@
                     <option value="Database Management Systems">
                     <option value="Combinatorics and Graph Theory">
                     <option value="Physical Computing and IoT Programming">
-                    <option value="Web Programming">       
+                    <option value="Web Programming">
                 </datalist>
                 <span>Total number of questions</span><input type="text" style="margin-left:16.9%"><br>
                 <span>Total time in minute</span><input type="text" style="margin-left:22.9%"><br>
                 <button type="Submit">Create Exam</button>
             </div>
         </form>
-    </body>
-</html>
+        {% endblock %}
