--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -3,12 +3,10 @@
     <head>
         <title>Professors Page</title>
         <script>
-
         </script>
     <style>
-
-        div{
-            position:absolute;
+        .Professors{
+            position:relative;
             margin-top:-1%;
             margin-left:-0.6%;
             font-size:40px;
@@ -18,7 +16,7 @@
             width:25%;
             height:750px;
         }
-        div>form>h6>a{
+        .Professors>form>h6>a{
             Font-family:"Courier New";
             position:relative;
             top:20px;
@@ -27,19 +25,20 @@
             font-size:22px;
             text-decoration:none;
         }
-
-        div>form>h6>a:hover{
+        .Professors>form>h6>a:hover{
             text-decoration:underline;
         }
     </style>
     </head>
     <body>
-        {% block p %}  {% endblock %}
-        <div>
+        <div class="Professors">
             <span style="position:relative;top:45px;left:20px;"><b>Professor zone</b></span>
             <form action="/Create_Question" method="GET" id="q">
-                <h6><a href="#" onclick="getElementById('q').submit()">Create Paper</a></h6>
+                <h6><a onclick="getElementById('q').submit()">Create Paper</a></h6>
             </form>
+        </div>
+        <div>
+            {% block p %} {% endblock %}
         </div>
     </body>
 </html>
