--- a/templates/question.html
+++ b/templates/question.html
@@ -1,11 +1,12 @@
 {% extends "Professors.html" %}
-        {% block style %}
-        form>div{
+{% block p %}
+        <style>
+        .QPaper>div{
             position:relative;
-            margin-top:7%;
-            margin-left:25%;
+            margin-top:-50%;
+            margin-left:35%;
         }
-        form>div>input{
+        .QPaper>div>input{
             position: relative;
             margin-top:0.5cm;
             width:10cm;
@@ -15,7 +16,7 @@
             font-size:15px;
             margin-left:25%;
         }
-        form>div>button{
+        .QPaper>div>button{
             border-radius:8px;
             border:0px;
             width:150px;
@@ -27,12 +28,12 @@
             background-color:green;
             margin-top:5%;
         }
-        form>div>span{
+        .QPaper>div>span{
             position: relative;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-size:20px;
         }
-        form>div>select{
+        .QPaper>div>select{
             position: relative;
             margin-left: 36%;
             margin-top:0.5cm;
@@ -41,17 +42,15 @@
             border-radius:4px;
             border:solid 1px grey;
         }
-        {% endblock %}
-
-       {% block p %}
-        <form id="QPaper">
+    </style>
+        <form class="QPaper" >
             <div>
 
                 <span>Branch</span><select>
                     <option value="Cs">CS</option>
                     <option value="It">IT</option>
                 </select> <br>
-                <span>Semester</span><select style="margin-left:33.5%">
+                <span>Semester</span><select style="margin-left:33%">
                     <option value="1">1</option>
                     <option value="1">2</option>
                     <option value="1">3</option>
@@ -60,8 +59,8 @@
                     <option value="1">6</option>
                 </select>
                 <br>
-                <span>Question paper code(6 digit)*</span><input type="text" pattern="[0-9]{6}" maxlength="6" style="margin-left: 13%"><br>
-                <span>Subject Name</span><input type="text" style="margin-left:29%" list="Subject"><br>
+                <span>Question paper code(6 digit)*</span><input type="text" pattern="[0-9]{6}" maxlength="6" style="margin-left: 9%"><br>
+                <span>Subject Name</span><input type="text" style="margin-left:27.3%" list="Subject"><br>
                 <datalist id="Subject">
                     <option value="Theroy of Computation">
                     <option value="Core JAVA">
@@ -71,9 +70,8 @@
                     <option value="Physical Computing and IoT Programming">
                     <option value="Web Programming">
                 </datalist>
-                <span>Total number of questions</span><input type="text" style="margin-left:16.9%"><br>
-                <span>Total time in minute</span><input type="text" style="margin-left:22.9%"><br>
+                <span>Total number of questions</span><input type="text" style="margin-left:13%"><br>
                 <button type="Submit">Create Exam</button>
             </div>
         </form>
-        {% endblock %}
+{% endblock %}
