--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -40,10 +40,8 @@
         <div class="Professors">
 
             <span style="position:relative;top:45px;left:20px;"><b>Professor zone</b></span>
-            <form action="/Create_Question" method="GET" id="q">
-                <div class="Email" >
-                <span name="Email"> User email:{{Email}} </span>
-            </div>
+            <form action="/Create_Question/{{Email}}" method="GET" id="q">
+
                 <h6><a onclick="getElementById('q').submit()">Create Paper</a></h6>
             </form>
         </div>
