--- a/templates/question.html
+++ b/templates/question.html
@@ -44,7 +44,7 @@
         }
     </style>
 
-        <form class="QPaper" action="/Create_Paper" method="Post" name="reload">
+        <form class="QPaper" action="/Create_Paper/{{Email}}" method="Post" name="reload">
             <div>
                 <span>Branch</span><select name="Branch">
                     <option value="Cs">CS</option>
