--- a/templates/question.html
+++ b/templates/question.html
@@ -3,7 +3,7 @@
         <style>
         .QPaper>div{
             position:relative;
-            margin-top:-50%;
+            margin-top:-45%;
             margin-left:35%;
         }
         .QPaper>div>input{
@@ -44,7 +44,7 @@
         }
     </style>
 
-        <form class="QPaper" action="/Create_Paper/{{Email}}" method="Post" name="reload">
+        <form class="QPaper" action="/{{Email}}/Create_Paper" method="Post" name="reload">
             <div>
                 <span>Branch</span><select name="Branch">
                     <option value="Cs">CS</option>
