--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -7,16 +7,16 @@
     <style>
         .Professors{
             position:relative;
-            margin-top:-2%;
+            margin-top:-3%;
             margin-left:-0.6%;
             font-size:40px;
             background-color:brown;
             color:white;
             font-family:Arial;
             width:25%;
-            height:750px;
+            height:655px;
         }
-        .Professors>form>h6>a{
+        .Professors>h6>a{
             Font-family:"Courier New";
             position:relative;
             top:20px;
@@ -25,26 +25,29 @@
             font-size:22px;
             text-decoration:none;
         }
-        .Professors>form>h6>a:hover{
+        .Professors>h6>a:hover{
             text-decoration:underline;
+        }
+        .logout>a{
+            margin-left:33.5cm;
+            text-decoration:none;
+            font-size:20px;
+        }
+        .logout>a:hover{
+            text-decoration:underline;
+
         }
     </style>
     </head>
     <body>
-
+        <header class="logout" ><a href="/logout">Logout</a></header>
         <div class="Professors">
-
             <span style="position:relative;top:45px;left:20px;"><b>Professor zone</b></span>
-
-            <form action="/Create_Question/{{Email}}" method="GET" id="q">
-
-            <form action='/Create_Question/{{Email}}' method="GET" id="q">
-
-                <h6><a onclick="getElementById('q').submit()">Create Paper</a></h6>
-            </form>
+                <h6><a href="/{{Email}}/Create_Question">Create Paper</a></h6>
         </div>
         <div>
             {% block p %} {% endblock %}
         </div>
+
     </body>
 </html>
