--- a/templates/question.html
+++ b/templates/question.html
@@ -1,12 +1,16 @@
 {% extends "Professors.html" %}
 {% block p %}
-        <style>
-        .QPaper>div{
+      <style>
+        form>div{
+
+            margin-left:auto;
+            margin-right:auto;
+            width:960px;
             position:relative;
-            margin-top:-45%;
-            margin-left:35%;
+            margin-top:-42%;
+            margin-left:33%;
         }
-        .QPaper>div>input{
+        form>div>input{
             position: relative;
             margin-top:0.5cm;
             width:10cm;
@@ -16,7 +20,7 @@
             font-size:15px;
             margin-left:25%;
         }
-        .QPaper>div>button{
+        form>div>button{
             border-radius:8px;
             border:0px;
             width:150px;
@@ -28,12 +32,12 @@
             background-color:green;
             margin-top:5%;
         }
-        .QPaper>div>span{
+        form>div>span{
             position: relative;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-size:20px;
         }
-        .QPaper>div>select{
+        form>div>select{
             position: relative;
             margin-left: 36%;
             margin-top:0.5cm;
@@ -43,25 +47,27 @@
             border:solid 1px grey;
         }
     </style>
-
-        <form class="QPaper" action="/{{Email}}/Create_Paper" method="Post" name="reload">
+    </head>
+    <body>
+        <form id="QPaper">
             <div>
-                <span>Branch</span><select name="Branch">
+
+                <span>Branch</span><select>
                     <option value="Cs">CS</option>
                     <option value="It">IT</option>
                 </select> <br>
-                <span>Semester</span><select name="Sem" style="margin-left:33%" >
+                <span>Semester</span><select style="margin-left:33.5%">
                     <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
+                    <option value="1">2</option>
+                    <option value="1">3</option>
+                    <option value="1">4</option>
+                    <option value="1">5</option>
+                    <option value="1">6</option>
                 </select>
                 <br>
-                <span>Question paper code(6 digit)*</span><input type="text" pattern="[0-9]{6}" maxlength="6" style="margin-left: 9%" name="QuestionPaperCode"><br>
-                <span>Subject Name</span><input type="text" style="margin-left:27.3%" list="Subject" name="SubjectName"><br>
-                <datalist id="Subject" >
+
+                <span>Subject Name</span><input type="text" style="margin-left:29%" list="Subject"><br>
+                <datalist id="Subject">
                     <option value="Theroy of Computation">
                     <option value="Core JAVA">
                     <option value="Operating System">
@@ -70,8 +76,8 @@
                     <option value="Physical Computing and IoT Programming">
                     <option value="Web Programming">
                 </datalist>
-                <span>Total number of questions</span><input type="text" name="NumberOfQuestions" style="margin-left:13%"><br>
-                <span>Marks per questions</span><input type="text" name="Marks" style="margin-left:20%;" ><br>
+                <span>Total number of questions</span><input type="text" style="margin-left:16.3%"><br>
+                <span>Total time in minute</span><input type="text" style="margin-left:22.9%"><br>
                 <button type="Submit">Create Exam</button>
             </div>
         </form>
