Do the last function

--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -77,10 +77,11 @@
 
         <header class="logout" ><a href="/logout">Logout</a></header>
         <div class="Professors">
-            <span style="position:relative;top:45px;left:20px;"><b>Professor zone</b></span>
+            <span style="position:relative;top:45px;left:14px;"><b>Professors zone</b></span>
                 <h6><a href="/{{Email}}/Create_Question">Create Paper Online</a></h6>
 
                 <h6><a  onclick="upload()" style="cursor:pointer;">Upload a file</a></h6>
+                <h6><a  href="/static/CsvFormat.png" style="cursor:pointer;">See CSV format</a></h6>
         </div>
         <div id="onlinePaper">
             {% block p %} {% endblock %}
