--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -12,14 +12,13 @@
 
             let Exams = document.getElementById("Exams")
             Exams.style.display = "none";
-
         }
 
         </script>
     <style>
         .Professors{
             position:fixed;
-            margin-top:-2%;
+            margin-top:-1.5%;
             margin-left:-0.6%;
             float:top;
             font-size:40px;
@@ -32,7 +31,7 @@
         .Professors>h6>a{
             Font-family:"Courier New";
             position:relative;
-            top:20px;
+            top:7px;
             left:20px;
             color:white;
             font-size:22px;
@@ -80,9 +79,8 @@
                 color:blue;
             }
             .fieldset>button{
-
+                position:relative;
                 border-radius:8px;
-
                 width:100px;
                 height:30px;
                 font-size:14px;
@@ -93,23 +91,20 @@
                 background-color:green;
                 margin-top:2%;
                 }
-
     </style>
     </head>
     <body style= "background:lightblue;">
-         <header class="logout" ><a href="/logout">Logout</a></header>
+         <header class="logout" ><a href="/logout" style="padding-top:1%;">Logout</a></header>
         <div class="Professors">
-            <span style="position:relative;top:45px;left:14px;"><b>Professors zone</b></span>
+            <span style="position:relative;top:20px;left:14px;"><b>Professors zone</b></span>
                 <h6><a href="/{{Email}}/Create_Question" >Create Paper Online</a></h6>
 
                 <h6><a  onclick="upload()" style="cursor:pointer;">Upload a file</a></h6>
                 <h6><a  href="/static/CsvFormat.png" style="cursor:pointer;">See CSV format</a></h6>
         </div>
-        {% set i=1 %}
+
+        <div id="Exams">
         {% for r in E%}
-            <div id="Exams">
-
-
             <fieldset class="fieldset">
                 <legend>Paper {{loop.index}}</legend>
                 <span style="word-spacing: 250px;">
@@ -117,16 +112,13 @@
                         {{row}}
                     {%- endfor -%}
                 </span>
-
                 <br>
                 <br>
                 <button type="submit">Delete paper</button>
             </fieldset>
             <br>
-            </div>
-
         {%- endfor -%}
-
+        </div>
          <div style="display:none;" id="upload" class="upload">
             <form  method = "POST" action = "/{{Email}}/uploader"  enctype = "multipart/form-data" >
                 <input type = "file" name = "file">
