--- a/templates/question.html
+++ b/templates/question.html
@@ -1,90 +1,91 @@
 {% extends "Professors.html" %}
 {% block p %}
         <script>
-            let Exams = document.getElementById("Exams")
-            Exams.style.display = "none";
-
-
+            document.addEventListener('DOMContentLoaded', function () {
+                   let div = document.getElementById("div");
+                    div.style.display = "none";
+    });
         </script>
       <style>
-        form>div{
-            position:absolute;
-            margin-left:auto;
-            margin-right:auto;
-            width:960px;
+                form>div{
+                    position:absolute;
+                    margin-left:auto;
+                    margin-right:auto;
+                    width:960px;
 
-            margin-top:5%;
-            margin-left:33%;
-        }
-        form>div>input{
-            position: relative;
-            margin-top:0.5cm;
-            width:10cm;
-            height:1cm;
-            border-radius:4px;
-            border:solid 1px grey;
-            font-size:15px;
-            margin-left:25%;
-        }
-        form>div>button{
-            border-radius:8px;
-            border:0px;
-            width:150px;
-            height:40px;
-            font-size:18px;
-            text-align:center;
-            margin-left:44%;
-            color:white;
-            background-color:green;
-            margin-top:5%;
-        }
-        form>div>span{
-            position: relative;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            font-size:20px;
-        }
-        form>div>select{
-            position: relative;
-            margin-left: 36%;
-            margin-top:0.5cm;
-            width:150px;
-            height:40px;
-            border-radius:4px;
-            border:solid 1px grey;
-        }
-    </style>
-    </head>
-    <body>
-        <form id="QPaper">
-            <div>
+                    margin-top:4%;
+                    margin-left:33%;
+                }
+                form>div>input{
+                    position: relative;
+                    margin-top:0.5cm;
+                    width:10cm;
+                    height:1cm;
+                    border-radius:4px;
+                    border:solid 1px grey;
+                    font-size:15px;
+                    margin-left:25%;
+                }
+                form>div>button{
+                    border-radius:8px;
+                    border:0px;
+                    width:150px;
+                    height:40px;
+                    font-size:18px;
+                    text-align:center;
+                    margin-left:44%;
+                    color:white;
+                    background-color:green;
+                    margin-top:5%;
+                }
+                form>div>span{
+                    position: relative;
+                    font-family: Verdana, Geneva, Tahoma, sans-serif;
+                    font-size:20px;
+                }
+                form>div>select{
+                    position: relative;
+                    margin-left: 36%;
+                    margin-top:0.5cm;
+                    width:150px;
+                    height:40px;
+                    border-radius:4px;
+                    border:solid 1px grey;
+                }
+            </style>
+            </head>
+            <body>
+             <form id="QPaper"  action ="/{{Email}}/uploader"  method="POST"  enctype = "multipart/form-data">
+    <div>
+        <span>Branch</span><select name="Branch">
+            <option value="Cs">CS</option>
+            <option value="It">IT</option>
+        </select> <br>
+        <span>Semester</span><select style="margin-left:33.5%" name="Sem">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+        </select>
+        <br>
 
-                <span>Branch</span><select>
-                    <option value="Cs">CS</option>
-                    <option value="It">IT</option>
-                </select> <br>
-                <span>Semester</span><select style="margin-left:33.5%">
-                    <option value="1">1</option>
-                    <option value="1">2</option>
-                    <option value="1">3</option>
-                    <option value="1">4</option>
-                    <option value="1">5</option>
-                    <option value="1">6</option>
-                </select>
-                <br>
+        <span>Subject Name</span><input type="text" style="margin-left:29%" list="Subject" name="Subject"><br>
+        <datalist id="Subject">
+            <option value="Theroy of Computation">
+            <option value="Core JAVA">
+            <option value="Operating System">
+            <option value="Database Management Systems">
+            <option value="Combinatorics and Graph Theory">
+            <option value="Physical Computing and IoT Programming">
+            <option value="Web Programming">
+        </datalist>
 
-                <span>Subject Name</span><input type="text" style="margin-left:29%" list="Subject"><br>
-                <datalist id="Subject">
-                    <option value="Theroy of Computation">
-                    <option value="Core JAVA">
-                    <option value="Operating System">
-                    <option value="Database Management Systems">
-                    <option value="Combinatorics and Graph Theory">
-                    <option value="Physical Computing and IoT Programming">
-                    <option value="Web Programming">
-                </datalist>
-                <span>Total number of questions</span><input type="text" style="margin-left:16.3%"><br>
-                <span>Total time in minute</span><input type="text" style="margin-left:22.9%"><br>
-                <button type="Submit">Create Exam</button>
-            </div>
-        </form>
+
+        <div> <input type = "file" name = "file" style="margin-top:5%;margin-left:11cm"/></div>
+        <button type="Submit">Create Exam</button>
+    </div>
+</form>
+</body>
 {% endblock %}
