Every things works fine till Professors.Students is on the way

--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -112,8 +112,8 @@
                     <td>{{r[0]}}</td>
                     <td>{{r[1]}}</td>
                     <td>{{r[2]}}</td>
-                    <td><button type="submit" class="button">Delete</button></td>
-                    <td><button type="submit" class="button">Deploy</button></td>
+                    <td><a href="/{{r[2]}}/delete"><button type="submit" class="button">Delete</button></form></td>
+                    <td><a href="#"><button type="submit" class="button">Deploy</button></a></td>
                 </tr>
                 {% endfor %}
             </table>
