--- a/templates/ExamZone.html
+++ b/templates/ExamZone.html
@@ -65,7 +65,7 @@
                     </h2>
             <h3>{{row0[0]}}</h3>
             <table height="80">
-                <form action="/#" method="POST">
+                <form action="/StudentZone" method="POST">
                     <tr><button type="submit" class="options">{{row0[1]}}</button></tr><br><br><br><br>
                     <tr><button type="submit" class="options" >{{row0[2]}}</button></tr><br><br><br><br>
                     <tr><button type="submit" class="options">{{row0[3]}}</button></tr><br><br><br><br>
