Finally i done it

--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -115,7 +115,7 @@
                     <td>{{r[2]}}</td>
                     <td><a href="/{{r[2]}}/delete"><button type="submit" class="button">Delete</button></form></td>
                     <td><a href="/{{Email}}/{{r[2]}}/Deploy"><button type="submit" class="button">Deploy</button></a></td>
-                    <td><a href="/{{Email}}/{{r[2]}}/Deploy"><button type="submit" class="button">See Result</button></a></td>
+                    <td><a href="/{{Email}}/{{r[2]}}/SeeResult"><button type="submit" class="button">See Result</button></a></td>
                 </tr>
                 {% endfor %}
             </table>
