--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -107,7 +107,7 @@
                     <th><h2>Subject</h2></th>
                     <th><h2>Delete</h2></th>
                     <th><h2>Deploy</h2></th></span>
-                    <th><h2>Deploy</h2></th></span>
+                    <th><h2>See Result</h2></th></span>
                 {% for r in E %}
                 <tr align="center" style="font-size: 25px;">
                     <td>{{r[0]}}</td>
